--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="The place for everything n_bonnie2 related">
+  <meta name="description" content="[NEW] and [IMPROVED] n_bonnie2 Website, we can do much more now!">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>BonSite - Home</title>
   <link href="style.css" rel="stylesheet" type="text/css"/>
 <body>
 <h1>test</h1>
