--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="[NEW] and [IMPROVED] n_bonnie2 Website, we can do much more now!">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BonSite - Home</title>
-  <link href="style.css" rel="stylesheet" type="text/css"/>
+ <meta charset="UTF-8">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ <meta name="description" content="[NEW] and [IMPROVED] BonSite... hi...">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>BonSite - Home</title>
+ <link href="style.css" rel="stylesheet" type="text/css"/>
 <body>
-<h1>test</h1>
+<h1>BonSite</h1>
+  
+<img src="" alt="n_bonnie2 Profile Picture" />
+  
 </body>
 </html>
