--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
  <link href="style.css" rel="stylesheet" type="text/css"/>
 <body>
 <h1>BonSite</h1>
-  
-<img src="" alt="n_bonnie2 Profile Picture" />
+
+This is still a work in progress and I'm still tryna learn HTML
+<img src="https://github.com/underscoreBon/BonSiteNeo/blob/main/images/placeholder_image.png?raw=true" alt="Image Test" />
   
 </body>
 </html>
