--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>BonSite - Home</title>
  <link href="style.css" rel="stylesheet" type="text/css"/>
-<body>
-<h1>BonSite</h1>
 
-This is still a work in progress and I'm still tryna learn HTML
-<img src="https://github.com/underscoreBon/BonSiteNeo/blob/main/images/placeholder_image.png?raw=true" alt="Image Test" />
+<body>
+
+<h1>n_bonnie2</h1>
+
+<p>This is still a work in progress and I'm still tryna learn HTML</p>
+<br>
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+    <img src="https://github.com/underscoreBon/BonSiteNeo/blob/main/images/placeholder_image.png?raw=true" alt="Image Test" />
+</a>
   
 </body>
 </html>
