--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="description" content="[NEW] and [IMPROVED] BonSite... hi...">
+ <meta name="description" content="BonSiteNEO - A new and improved (?) Site build from scratch and hosted on GitHub Pages!">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>BonSite - Home</title>
+ <title>BonSite - n_bonnie2's Website - Home </title>
  <link href="style.css" rel="stylesheet" type="text/css"/>
 
 <body>
 
 <h1>n_bonnie2</h1>
 
-<p>This is still a work in progress and I'm still tryna learn HTML</p>
+<p>This is still a work in progress and I'm still tryna learn HTML, props to the people who found this thing before it actually releases</p>
 <br>
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
     <img src="https://github.com/underscoreBon/BonSiteNeo/blob/main/images/placeholder_image.png?raw=true" alt="Image Test" />
