this will be the boinsite of all

--- a/index.html
+++ b/index.html
@@ -1,31 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
 
+
+
+<html lang="en">
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="description" content="BonSiteNEO - A new and improved (?) Site build from scratch and hosted on GitHub Pages!">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>BonSite - n_bonnie2's Website - Home </title>
- <link href="css/style.css" rel="stylesheet" type="text/css"/>
- <script src="js/header.js" type="text/javascript" defer></script>
- <link rel="icon" type="image/x-icon" href="media/images/favicon.ico">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>
+BonSite - n_bonnie2’s Carrd Website</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="color-scheme" content="light only">
+<meta name="description" content="BonSite - n_bonnie2’s Website - The center place of n_bonnie2’s Info, Socials, and Permissions.">
+<meta property="og:site_name" content="BonSite - n_bonnie2’s Website">
+<meta property="og:title" content="BonSite">
+<meta property="og:type" content="website">
+<meta property="og:description" content="pleasee look at it pretty please">
+<meta property="twitter:card" content="summary_large_image">
 </head>
 
-<body>
-    <i-need-a-name></i-need-a-name>
-<main>
-    <p>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-            <img src="media/images/headphoney_wip.svg" alt="This section of the website is still a work in progress, please come again soon!" width="800" height="500" id="wip"/>
-        </a>
-    </p>
-</main>
-    <noscript>
-        Why the hell do you NOT have javascript on? like seriously? LITERALLY 90% OF WEBSITES USE JS.<br>
-        YOU IDIOT. THERE ARE ALTERNATIVES TO "sEcUrItY" YA KNOW?!??!<br>
-        Just go and go to your browser's settings and turn it on. (you paranoid piece of garbage)<br>
-        no offense.
-    </noscript>
-</body>
-</html>
+this will be the bonsite of the century
