--- a/index.html
+++ b/index.html
@@ -1,35 +1,10 @@
-<!DOCTYPE html>
+---
+layout: default
+---
 
 
+<main class="bon_container pixel_font">
 
-<html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    this will be the bonsite of the century
 
-<title>
-BonSite - n_bonnie2’s Website
-</title>
-<link rel="stylesheet" href="style.css">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="color-scheme" content="light only">
-<meta name="description" content="BonSite - n_bonnie2’s Website - The centerplace of n_bonnie2’s Info, Socials, and Permissions.">
-<meta property="og:site_name" content="BonSite - n_bonnie2’s Website">
-<meta property="og:title" content="BonSite">
-<meta property="og:type" content="website">
-<meta property="og:description" content="The centerplace of n_bonnie2’s Info, Socials, and Permissions.">
-<meta property="twitter:card" content="summary_large_image">
-
-</head>
-
-<h1> 
-    
-</h1>
-
-<p> 
-    this will be the bonsite of the century guys!<br>
-    That joke aside, this will be the NEW bonsite, built from the ground up!
-</p>
-
-<the>
-    Hosted on <a href="https://pages.github.com/">Github Pages</a>
-</the>
+</main>
