--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
+permalink: /
 ---
 
 
 <main class="bon_container pixel_font">
-
     this will be the bonsite of the century
-
+    coming eventually when i can get this design down
 </main>
