--- a/404.html
+++ b/404.html
@@ -5,11 +5,16 @@ layout: default
 
 
 <main class="bon_container">
+  <p1 class="pixel_font">
+    BonSite - ERROR 404, Page Not Found
+  </p1>
         <h1 class="pixel_font">
           I think you went too far...
         </h1>
         <p class="pixel_font">
-          the requested page cannot be found!
-          <img src="/images/headphoney_wip.svg" alt="OOPS!" width="500" height="300"> </img>
+          the requested page cannot be found, please try again later!
+          <br>
+          <br>
+          <img class="keep_aspect" src="/images/404.svg" alt="Headphoney wondering where the page is" width="500" height="300"> </img>
         </p>
 </main>
