--- a/index.html
+++ b/index.html
@@ -5,6 +5,45 @@ permalink: /
 
 
 <main class="bon_container pixel_font">
-    this will be the bonsite of the century
-    coming eventually when i can get this design down
+    <p1 class="pixel_font">
+        BonSite - Main Page
+      </p1>
+    <h1>
+        Hello!
+    </h1>
+    <p class="container">
+        <img src="{{ site.baseurl }}/images/n_bonnie2.jpg" class="keep_aspect" width="250" align="right">
+        I'm n_bonnie2 / Headphoney_ / underscoreBon. Some random guy on the internet that does random crap in an somewhat impressive way.<br>
+        <li>Multifandom Internet User</li>
+        <li>16 y/o</li>
+        <li>male (he/him)</li>
+        <li>Experience in Lua and Minecraft (Java) Datapack </li>
+        <li>Helped with various projects</li>
+        <br>
+        <h2>Where to Find Me?</h2>
+        (⭐ = Most Active)
+        <h3>Main Profiles:</h3>
+        <li>⭐ - Discord: @n_bonnie2 - <a href="https://discord.gg/mPC5GVYN3f">Join Discord Server</a></li>
+        <li>⭐ - Youtube: <a href="https://discord.gg/mPC5GVYN3f">@n_bonnie2</a></li>
+        <li>Scratch: <a href="https://scratch.mit.edu/users/n_bonnie2/">@n_bonnie2</a></li>
+        <li>Bluesky: <a href="https://bsky.app/profile/underscorebon.bsky.social">@underscorebon.bsky.social</a></li>
+        <li>GitHub: <a href="https://github.com/underscoreBon">@underscoreBon</a></li>
+        <li>Pixilart: <a href="https://www.pixilart.com/underscorebon">@underscorebon</a></li>
+        <h3>Game Profiles:</h3>
+        <li>⭐ - Roblox: - <a href="https://www.roblox.com/users/286795628/profile">@n_bonnie2</a></li>
+        <li>
+            ⭐ - Minecraft Java IGN: n_bonnie2 - <a href="https://namemc.com/profile/0a9c677e-66b2-4c6f-b4e9-4cbcc28d3510">NameMC</a>
+            <dd>Hypixel Forums <a href="https://hypixel.net/members/n_bonnie2.6292644/#about">@n_bonnie2</a></dd>
+            <dd>Hypixel Skyblock Stats <a href="https://sky.shiiyu.moe/stats/n_bonnie2/Pineapple">Main Profile</a></dd>
+            <dd>Wynncraft Stats <a href="https://wynncraft.com/stats/player/n_bonnie2">Main Profile</a></dd>
+            <dd>Hypixel Skyblock Stats <a href="https://www.minecraftskins.com/profile/7474930">@underscorebon</a></dd>
+            <dd>Planet MC <a href="https://www.planetminecraft.com/member/n_bonnie2/">@n_bonnie2</a></dd>
+            <dd>Modrinth <a href="https://modrinth.com/user/n_bonnie2">@n_bonnie2</a></dd>
+            <dd>Curseforge <a href="https://www.curseforge.com/members/n_bonnie2/">@n_bonnie2</a></dd>
+        </li>
+        <li>Steam: - <a href="https://steamcommunity.com/id/n_bonnie2/">@n_bonnie2</a></li>
+        <li>Xbox Live: - <a href="https://www.xbox.com/en-US/play/user/nbonnie24152">@nbonnie24152</a></li>
+        <li>Geometry Dash: underscoreBon - <a href="https://namemc.com/profile/0a9c677e-66b2-4c6f-b4e9-4cbcc28d3510">GDBrowser</a></li>
+        <a href="{{ site.baseurl }}/retired_socials">Inactive/Retired Socials Here...</a>
+    </p>
 </main>
