--- a/404.html
+++ b/404.html
@@ -15,6 +15,6 @@ layout: default
           the requested page cannot be found, please try again later!
           <br>
           <br>
-          <img class="keep_aspect" src="/images/404.svg" alt="Headphoney wondering where the page is" width="500" height="300"> </img>
+          <img class="keep_aspect" src="/images/404.svg" alt="Headphoney wondering where the page is" height="200"> </img>
         </p>
 </main>
