--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ permalink: /
     <h1>
         Hello!
     </h1>
+
     <p class="container">
         <img src="{{ site.baseurl }}/images/n_bonnie2.jpg" class="keep_aspect" width="250" align="right">
         I'm n_bonnie2 / Headphoney_ / underscoreBon. Some random guy on the internet that does random crap in an somewhat impressive way.<br>
@@ -36,7 +37,7 @@ permalink: /
             <dd>Hypixel Forums <a href="https://hypixel.net/members/n_bonnie2.6292644/#about">@n_bonnie2</a></dd>
             <dd>Hypixel Skyblock Stats <a href="https://sky.shiiyu.moe/stats/n_bonnie2/Pineapple">Main Profile</a></dd>
             <dd>Wynncraft Stats <a href="https://wynncraft.com/stats/player/n_bonnie2">Main Profile</a></dd>
-            <dd>Hypixel Skyblock Stats <a href="https://www.minecraftskins.com/profile/7474930">@underscorebon</a></dd>
+            <dd>Skindex <a href="https://www.minecraftskins.com/profile/7474930/underscorebon">@underscorebon</a></dd>
             <dd>Planet MC <a href="https://www.planetminecraft.com/member/n_bonnie2/">@n_bonnie2</a></dd>
             <dd>Modrinth <a href="https://modrinth.com/user/n_bonnie2">@n_bonnie2</a></dd>
             <dd>Curseforge <a href="https://www.curseforge.com/members/n_bonnie2/">@n_bonnie2</a></dd>
@@ -44,6 +45,7 @@ permalink: /
         <li>Steam: - <a href="https://steamcommunity.com/id/n_bonnie2/">@n_bonnie2</a></li>
         <li>Xbox Live: - <a href="https://www.xbox.com/en-US/play/user/nbonnie24152">@nbonnie24152</a></li>
         <li>Geometry Dash: underscoreBon - <a href="https://namemc.com/profile/0a9c677e-66b2-4c6f-b4e9-4cbcc28d3510">GDBrowser</a></li>
+        <li>osu! - <a href="https://osu.ppy.sh/users/28403154">@n_bonnie2OSU</a></li>
         <a href="{{ site.baseurl }}/retired_socials">Inactive/Retired Socials Here...</a>
     </p>
 </main>
