--- a/more.html
+++ b/more.html
@@ -4,12 +4,14 @@ permalink: /more
 ---
 
 
-<main class="bon_container">
-    <p class="pixel_font"> 
+<main class="bon_container pixel_font">
+    <p class=""> 
         BonSite - More
     </p>
-    <p class="pixel_font"> 
-        this page is actually incomplete, come back when i have stuff to put here!
+    <p class=""> 
+        <h1>HOLD UP!</h1>
+        This category is under construction, like seriously!<br>
+        Please come back when I ACTUALLY have something to put here!
     </p>
-
+    <a href="{{ site.baseurl }}/"> Go Back</a>
 </main>
