--- a/projects.html
+++ b/projects.html
@@ -8,24 +8,56 @@ permalink: /projects
     <p class=""> 
         BonSite - Projects
     </p>
-    Projects! Projects! Everywhere! Catch them if you can! if you plan to use any of my stuff, PLEASE CREDIT<br>
+    Projects! Projects! Everywhere! Catch them if you can! if you plan to use any of my stuff, PLEASE CREDIT
 
-    (this is a mostly incomplete list.)
     <br>
     <br>
-    <img src="{{ site.baseurl }}/images/totem_banner.png" class="keep_aspect" width="350" align="right">
+
     <h3>Totem of Undying Death Messages</h3>
+    <img src="{{ site.baseurl }}/images/totem_banner.png" alt="totem of undying death messages" class="keep_aspect" width="355" align="right">
     <caption>
-        Minecraft Java Datapack for 1.20.2 and Higher that adds 30+ death messages to totem-related deaths.<br>
+        Minecraft Java Datapack for 1.20.2+ that adds 30+ death messages to totem-related deaths.<br>
+        Intended for use in Multiplayer Servers<br>
     Downloads:
     <a href="https://modrinth.com/datapack/totemdeathmessagesbon/">Modrinth</a>
     </caption>
+
+    <br>
     <br>
     -----------------------------
-    <h3>???</h3>
+
+    <h4>Previous FNF Projects</h4>
+    <p>What you see below is a list of Discontinued FNF Projects I have done.</p>
+    <h3>Friday Night Funkin': Remix Engine</h3>
+    <img src="{{ site.baseurl }}/images/remix_engine.png" alt="fnf remix engine" class="keep_aspect" width="350" align="right">
     <caption>
-        coming soon?
+       An Friday Night Funkin' Engine on Scratch that has full support for weeks, songs, and special notes (from other engines and fnf v-slice). 
+       Has support for the cabalex and AYS/SSS fromats.
+       <br>
+       Development is currently discontinued with no substantial updates.
+       <br>
+       Links: 
+       <a href="https://scratch.mit.edu/projects/609762892/">Scratch</a>
     </caption>
+
+    <br>
+    <br>
+
+    <h3>Bon's Funkin Lua Scripts</h3>
+    <img src="{{ site.baseurl }}/images/no_image.png" class="keep_aspect" width="350" align="right">
+    <caption>
+        A repository of all of n_bonnie2's scripts for Friday Night Funkin': Psych Engine, some scripts are more maintained than others.
+        <br>
+       <br>
+       Development of most scripts is currently discontinued with no substantial updates.
+       <br>
+       Links: 
+       <a href="https://github.com/underscoreBon/FunkinLuaScripts">GitHub Repository</a>
+    </caption>
+
+    <br>
+    <br>
+    <br>
 </main>
 
 <!-- You may use my content/assets/other stuff WITH PROPER credit or I will either force you to properly credit or take it down (unless otherwise noted)
