--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ permalink: /
         (⭐ = Most Active)
         <h3>Main Profiles:</h3>
         <li>⭐ - Discord: @n_bonnie2 - <a href="https://discord.gg/mPC5GVYN3f">Join Discord Server</a></li>
-        <li>⭐ - Youtube: <a href="https://discord.gg/mPC5GVYN3f">@n_bonnie2</a></li>
+        <li>⭐ - Youtube: <a href="https://www.youtube.com/channel/UC5TRcWIY1hbRgbCe0_qtBIg">@n_bonnie2</a></li>
         <li>Scratch: <a href="https://scratch.mit.edu/users/n_bonnie2/">@n_bonnie2</a></li>
         <li>Bluesky: <a href="https://bsky.app/profile/underscorebon.bsky.social">@underscorebon.bsky.social</a></li>
         <li>GitHub: <a href="https://github.com/underscoreBon">@underscoreBon</a></li>
