--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ permalink: /
     </h1>
 
     <p class="container">
-        <img src="{{ site.baseurl }}/images/n_bonnie2.jpg" class="keep_aspect" width="250" align="right">
+        <img src="{{ site.baseurl }}/images/n_bonnie2.jpg" class="keep_aspect half_image" width="350" align="right">
         I'm n_bonnie2 / Headphoney_ / underscoreBon. Some random guy on the internet that does random crap in an somewhat impressive way.<br>
         <li>Multifandom Internet User</li>
         <li>16 y/o</li>
