--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ permalink: /
         <li>Bluesky: <a href="https://bsky.app/profile/underscorebon.bsky.social">@underscorebon.bsky.social</a></li>
         <li>GitHub: <a href="https://github.com/underscoreBon">@underscoreBon</a></li>
         <li>Pixilart: <a href="https://www.pixilart.com/underscorebon">@underscorebon</a></li>
+        <li>Magma: <a href="https://magma.com/artist/n_bonnie2/about">@n_bonnie2</a></li>
         <h3>Game Profiles:</h3>
         <li>⭐ - Roblox: - <a href="https://www.roblox.com/users/286795628/profile">@n_bonnie2</a></li>
         <li>
