the database part 1.1

--- a/the_database/starstruck/index.html
+++ b/the_database/starstruck/index.html
@@ -13,6 +13,6 @@ notes: cosmic entity, do not shatter the star.
 image: contestants/starstruck.png
 
 prev: the_database/poddy
-next: the_database/
+next: the_database/commandy
 
 ---
