literally the fucking sun yeah....

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ permalink: /
     </h1>
 
     <p class="container">
-        <img src="{{ site.baseurl }}/images/n_bonnie2.jpg" class="keep_aspect half_image" width="350" align="right">
-        I'm n_bonnie2 / Headphoney_ / underscoreBon. Some random guy on the internet that does random crap in an somewhat impressive way.<br>
+        <img src="{{ site.baseurl }}/images/n_bonnie2.jpg" class="keep_aspect half_image" width="35%" align="right">
+        Hi! I'm n_bonnie2 / Headphoney_ / underscoreBon, Creator of all sorts of things!<br>
         <li>Multifandom Internet User</li>
         <li>16 y/o</li>
-        <li>male (he/him)</li>
+        <li>Male (he/him)</li>
         <li>Experience in Lua and Minecraft (Java) Datapack </li>
-        <li>Helped with various projects</li>
+        <li>Done various projects, and indirectly or directly helped with some.</li>
         <br>
         <h2>Where to Find Me?</h2>
         (⭐ = Most Active)
