--- a/the_database/callibooky/index.html
+++ b/the_database/callibooky/index.html
@@ -5,7 +5,7 @@ title: callibooky - the database
 competition-name: Calligraphy Booky
 sex: F
 age: Unconfirmed
-height: 5'7
+height: 4'11"
 residence: Unknown
 occupation: Author
 notes: aka Callibooky
