--- a/the_database/poddy/index.html
+++ b/the_database/poddy/index.html
@@ -5,10 +5,10 @@ title: poddy - the database
 competition-name: Poddy
 sex: M
 age: Unconfirmed
-height: 5'7"
+height: 4'8"
 residence: Unknown
 occupation: N/A
-notes: presumed dead
+notes: presumed dead, still out there
 
 image: contestants/poddy.png
 
