--- a/the_database/scarfy/index.html
+++ b/the_database/scarfy/index.html
@@ -5,9 +5,9 @@ title: scarfy - the database
 competition-name: Scarfy
 sex: F
 age: Unconfirmed
-height: 4'9"
+height: 3'9"
 residence: Unknown
-occupation: Therapist
+occupation: Psychologist
 notes: N/A
 
 image: contestants/scarfy.png
