--- a/the_database/gifty/index.html
+++ b/the_database/gifty/index.html
@@ -3,10 +3,9 @@ layout: planedatabasepage
 title: gifty - the database
 
 competition-name: Gifty
-legal-name: Gale Frost
 sex: F
 age: Unconfirmed
-height: 5'4"
+height: 4'5"
 residence: Unknown
 occupation: ???
 notes: persumed daughter of callibooky and lollifrost. though not confirmed.
@@ -14,6 +13,6 @@ notes: persumed daughter of callibooky and lollifrost. though not confirmed.
 image: contestants/gifty.png
 
 prev: the_database/commandy
-next: the_database/
+next: the_database/puppet
 
 ---
