--- a/the_database/headphoney/index.html
+++ b/the_database/headphoney/index.html
@@ -5,10 +5,10 @@ title: headphoney - the database
 competition-name: Headphoney
 sex: M
 age: Unconfirmed
-height: 5'6
+height: 4'10"
 residence: Unknown
 occupation: Campsite Holder
-notes: prefered object.
+notes: My preferred vessel.
 
 image: contestants/headphoney.png
 
