--- a/index.html
+++ b/index.html
@@ -15,26 +15,28 @@ permalink: /
     <p class="container">
         <img src="{{ site.baseurl }}/images/n_bonnie2.jpg" class="keep_aspect half_image" width="35%" align="right">
         Hi! I'm n_bonnie2 / Headphoney_ / underscoreBon, Creator of all sorts of things!<br>
-        <li>Multifandom Internet User</li>
-        <li>16 y/o</li>
-        <li>Male (he/him)</li>
-        <li>Experience in Lua and Minecraft (Java) Datapack </li>
-        <li>Done various projects, and indirectly or directly helped with some.</li>
+                <li>Multifandom Internet User + Creator of Things</li>
+                <li>16 y/o</li>
+                <li>Male (he/him)</li>
+                <li>Experience in Lua and Minecraft (Java) Datapack </li>
+                <li>Done various projects, and indirectly or directly helped with some.</li>
+                <li>Multifandom (didn't i say that already) BFDI/OSC, Various Roblox games...?, Undertale/Deltarune, blah blah blah.</li>
+                <li>If i don't reply in main socials at a reasonable time, assume i got disconnected from the internet as a whole.</li>
+        <br>
         <br>
         <h2>Where to Find Me?</h2>
-        (⭐ = Most Active)
         <h3>Main Profiles:</h3>
-        <li>⭐ - Discord: @n_bonnie2 - <a href="https://discord.gg/mPC5GVYN3f">Join Discord Server</a></li>
-        <li>⭐ - Youtube: <a href="https://www.youtube.com/channel/UC5TRcWIY1hbRgbCe0_qtBIg">@n_bonnie2</a></li>
+        <li>Discord: @n_bonnie2 - <a href="https://discord.gg/mPC5GVYN3f">Join Discord Server</a></li>
+        <li>Youtube: <a href="https://www.youtube.com/channel/UC5TRcWIY1hbRgbCe0_qtBIg">@n_bonnie2</a></li>
         <li>Scratch: <a href="https://scratch.mit.edu/users/n_bonnie2/">@n_bonnie2</a></li>
         <li>Bluesky: <a href="https://bsky.app/profile/underscorebon.bsky.social">@underscorebon.bsky.social</a></li>
         <li>GitHub: <a href="https://github.com/underscoreBon">@underscoreBon</a></li>
         <li>Pixilart: <a href="https://www.pixilart.com/underscorebon">@underscorebon</a></li>
         <li>Magma: <a href="https://magma.com/artist/n_bonnie2/about">@n_bonnie2</a></li>
         <h3>Game Profiles:</h3>
-        <li>⭐ - Roblox: - <a href="https://www.roblox.com/users/286795628/profile">@n_bonnie2</a></li>
+        <li>Roblox: - <a href="https://www.roblox.com/users/286795628/profile">@n_bonnie2</a></li>
         <li>
-            ⭐ - Minecraft Java IGN: n_bonnie2 - <a href="https://namemc.com/profile/0a9c677e-66b2-4c6f-b4e9-4cbcc28d3510">NameMC</a>
+            Minecraft Java IGN: n_bonnie2 - <a href="https://namemc.com/profile/0a9c677e-66b2-4c6f-b4e9-4cbcc28d3510">NameMC</a>
             <dd>Hypixel Forums <a href="https://hypixel.net/members/n_bonnie2.6292644/#about">@n_bonnie2</a></dd>
             <dd>Hypixel Skyblock Stats <a href="https://sky.shiiyu.moe/stats/n_bonnie2/Pineapple">Main Profile</a></dd>
             <dd>Wynncraft Stats <a href="https://wynncraft.com/stats/player/n_bonnie2">Main Profile</a></dd>
@@ -47,6 +49,18 @@ permalink: /
         <li>Xbox Live: - <a href="https://www.xbox.com/en-US/play/user/nbonnie24152">@nbonnie24152</a></li>
         <li>Geometry Dash: underscoreBon - <a href="https://namemc.com/profile/0a9c677e-66b2-4c6f-b4e9-4cbcc28d3510">GDBrowser</a></li>
         <li>osu! - <a href="https://osu.ppy.sh/users/28403154">@n_bonnie2OSU</a></li>
-        <a href="{{ site.baseurl }}/retired_socials">Inactive/Retired Socials Here...</a>
+    <button type="button" class="collapsible">Inactive Socials</button>
+        <div class="content">
+            don't contact me in these places, i only have them previously either during my FNF stage or having them for paranoia reasons.
+        <h3>Very Very Inactive:</h3>
+        <li>❌ - Reddit: <a href="https://www.reddit.com/user/n_bonnie2/">u/n_bonnie2</a></li>
+        <li>❌ - GameBanana: <a href="https://gamebanana.com/members/2019153">@n_bonnie2</a></li>
+        <li>❌ - Twitch: <a href="https://www.twitch.tv/n_bonnie2">@n_bonnie2</a></li>
+        <li>❌ - GameJolt: <a href="https://gamejolt.com/@n_bonnie2">@n_bonnie2</a></li>
+        <li>❌ - itch.io: <a href="https://underscorebonbon.itch.io/">@underscorebonbon</a></li>
+        <li>❌ - Tumblr: <a href="https://underscorebon.tumblr.com/">@underscorebon.tumblr.com</a></li>
+        <li>❌ - Twitter/X: <a href="https://x.com/n_bonnie2">@n_bonnie2</a></li>
+        <li>❌ - TikTok: <a href="https://www.tiktok.com/@n_bonnie2">@n_bonnie2</a></li>
+        </div>
     </p>
 </main>
