--- a/pages/projects.html
+++ b/pages/projects.html
@@ -9,7 +9,7 @@ title: Projects
     <p class=""> 
         BonSite - Projects and Resources
     </p>
-    Use the dropdown menus for more information!<br>if you plan to use any of my stuff, refer to my <a href="{{ site.baseurl }}/asset_permissions">Asset Permissions/Not-So-Legally-Binding Asset License</a>
+    Use the dropdown menus for more information! Keep in mind this list is non-exasutive<br>if you plan to use any of my stuff, refer to my <a href="{{ site.baseurl }}/asset_permissions">Asset Permissions/Not-So-Legally-Binding Asset License</a>
     <noscript>
         <br>PLEASE ENABLE JAVASCRIPT!!! THESE DROPDOWNS WON'T WORK WITHOUT JAVASCRIPT!!!!
     </noscript>
@@ -34,6 +34,7 @@ title: Projects
                 NOTICE: This only changes the happy ghast texture, not the ghastling.<br>
             Downloads:
             <a href="https://www.planetminecraft.com/texture-pack/bfdi-mouth-clipart-happy-ghast-snapshot-25w15a/">Planet Minecraft</a>
+            <a href="https://modrinth.com/resourcepack/bfdi-happy-ghast/">Modrinth</a>
             </caption>
         </div>
     <h4>Legacy FNF Projects</h4>
