--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 permalink: /
+title: n_bonnie2
 ---
 
 
@@ -9,7 +10,7 @@ permalink: /
         BonSite - Main Page
       </p1>
     <h1>
-        Hello!
+        n_bonnie2
     </h1>
 
     <p class="container">
@@ -18,10 +19,10 @@ permalink: /
                 <li>Multifandom Internet User + Creator of Things</li>
                 <li>16 y/o</li>
                 <li>Male (he/him)</li>
-                <li>Experience in Lua and Minecraft (Java) Datapack </li>
+                <li>Experience in Lua(u) and Minecraft (Java) Datapack </li>
                 <li>Done various projects, and indirectly or directly helped with some.</li>
-                <li>Multifandom (didn't i say that already) BFDI/OSC, Various Roblox games...?, Undertale/Deltarune, blah blah blah.</li>
-                <li>If i don't reply in main socials at a reasonable time, assume i got disconnected from the internet as a whole.</li>
+                <li>Multifandom (didn't i say that already) BFDI/OSC, Various Roblox games...?, Undertale/Deltarune, the list goes on and on and on and on blah blah blah.</li>
+                <li>If i don't reply in main socials at a reasonable time, assume im busy</li>
         <br>
         <br>
         <h2>Where to Find Me?</h2>
