--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 permalink: /blog/
-title: Blogs
+title: n_bonnie2 - Blog Posts
 ---
 <main class="bon_container pixel_font">
 <p1 id="" class="">
