--- a/pages/more.html
+++ b/pages/more.html
@@ -12,10 +12,11 @@ title: More
     <p class=""> 
         <h1>Other Stuff</h1>
         <li><a href="https://github.com/underscoreBon/underscorebon.github.io">GitHub Repository for the Site</a></li>
-        <li><a href="{{ site.baseurl }}/asset_permissions">Asset Permissions/Not-So-Legally-Binding Asset License</a></li>
+        <li><a href="{{ site.baseurl }}/asset_permissions">Asset Permissions/Not-So-Legally-Binding Asset License</a><li>
         
-        <a href="{{ site.baseurl }}/the_database">TH3_D4T4B453...</a>
     </p>
     <a href="{{ site.baseurl }}/"> Go Back</a>
     <br>
+    
 </main>
+    </li><a href="{{ site.baseurl }}/the_database">hss aoha ylthpuz... pz hss ubss huk cvpk</a>
