removed database link

--- a/pages/more.html
+++ b/pages/more.html
@@ -13,10 +13,11 @@ title: More
         <h1>Other Stuff</h1>
         <li><a href="https://github.com/underscoreBon/underscorebon.github.io">GitHub Repository for the Site</a></li>
         <li><a href="{{ site.baseurl }}/asset_permissions">Asset Permissions/Not-So-Legally-Binding Asset License</a><li>
+
+        (do not ask about the old "the_database" page, it will be remade if i remember about the thing)
         
     </p>
     <a href="{{ site.baseurl }}/"> Go Back</a>
     <br>
     
 </main>
-    </li><a href="{{ site.baseurl }}/the_database">hss aoha ylthpuz... pz hss ubss huk cvpk</a>
